--- a/sipxpbx/sipxvxml/autoattendant_de.properties
+++ b/sipxpbx/sipxvxml/autoattendant_de.properties
@@ -15,6 +15,13 @@ onfail.label=Verhalten bei ung\u00FCltiger Eingabe
 onfail.description=Dieser Abschnitt erlaubt die Konfiguration des automatischen Antwortsystems f\u00FCr den Fall, dass der Anrufer keine \
  oder keine g\u00FCltigen Eingaben macht.
 
+onfail.noinputCount.label=Wiederholungs Anzahl
+onfail.noinputCount.description=Wie oft der Auto Ansager seine Ansage wiederholt, nach der ersten Ansage \
+, weil der User nicht antwortet und das System auflegt, oder den Anruf weiterleitet. \
+
+onfail.nomatchCount.label=Ungültige Antworten Zähler
+onfail.nomatchCount.description=Wie oft ein User eine ungültige Antwort geben kann, bevor er weitervermittelt oder getrennt wird
+
 onfail.reprompt.label=Anzahl Wiederholungen der Aufforderung
 onfail.reprompt.description=Die Anzahl Wiederholungen der Eingabeaufforderung bevor das Antwortsystem aufgibt und den Anruf entweder \
  transferiert oder abschliesst.
@@ -25,4 +32,6 @@ onfail.transfer.description=Falls eingeschaltet, so wird der Anrufer bei ung\u00
 
 onfail.transfer-extension.label=Weiterleiten an Nebenstelle
 onfail.transfer-extension.description=Nebenstelle, die im Fehlerfall verwendet wird um den Anruf zu transferieren.
+
+onfail.transfer-prompt.label=Ansage, die gespielt werden soll, wenn der Anruf weitergeleitet wird aufgrund fehlerhafter Eingaben
 
