--- a/sipxpbx/sipxproxy/sipxproxy_de.properties
+++ b/sipxpbx/sipxproxy/sipxproxy_de.properties
@@ -1,58 +1,58 @@
-proxy-configuration.label=Configuration Parameters
+proxy-configuration.label=Konfigurations Parameter
 
-proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.label=Default Serial Fork Expiration
-proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.description=Number of seconds that each phone in a sequential \
-series is allowed to ring with no answer before the next alternative is tried. \
-The most common case for this is a user with one phone and a voice mailbox - \
-the phone will ring for this many seconds and then roll over to voice mail.
-proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.label=Default Expiration
-proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.description=Number of seconds a call is allowed to go unanswered; \
-if this many seconds pass, the call request is returned with an error.
+proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.label=Standard Serial Fork Ablauf
+proxy-configuration.SIPX_PROXY_DEFAULT_SERIAL_EXPIRES.description=Wie lange in Sekunden ein jedes Telefon in einer sequentiellen Serie \
+ohne Antwort klingeln darf, bevor die nächste Alternative versucht wird. \
+Der üblichste Fall ist ein Benutzer mit einem Telefon und einer Mailbox - \
+das Telefon wird für soviele Sekunden klingeln und dann weitergeleitet an die Mailbox.
+proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.label=Default Ablauf
+proxy-configuration.SIPX_PROXY_DEFAULT_EXPIRES.description=Wieviele Sekunden ein Anruf unbeantwortet bleiben darf; \
+wenn diese Zeit verstrichen ist, wird der Anruf mit einem Fehler abgewiesen.
 
-call-rate-limit.label=Call Rate Limit
+call-rate-limit.label=Anrufe Rate Limit
 
-call-rate-limit.SIPX_PROXY_AUTOBAN_THRESHOLD_VIOLATORS.label=Penalize Threshold Violators
-call-rate-limit.SIPX_PROXY_AUTOBAN_THRESHOLD_VIOLATORS.description=If set on true the IPs identified as threshold violators \
-are automatically added on the black list
+call-rate-limit.SIPX_PROXY_AUTOBAN_THRESHOLD_VIOLATORS.label=Bestrafe Grenzverletzer
+call-rate-limit.SIPX_PROXY_AUTOBAN_THRESHOLD_VIOLATORS.description=Wenn dies auf eingeschaltet gestellt ist, dann werden die IPs, die als Grenzverletzer identifiziert werden \
+automatisch auf die Blacklistgesetzt.
 
-call-rate-limit.SIPX_PROXY_PACKETS_PER_SECOND_THRESHOLD.label=Packets per Second
-call-rate-limit.SIPX_PROXY_PACKETS_PER_SECOND_THRESHOLD.description=Number of packets per second allowed from an IP address before \
-considering it a DoS attack. Every time this threshold is exceeded the Violation Rate value associated with this IP is incremented.
+call-rate-limit.SIPX_PROXY_PACKETS_PER_SECOND_THRESHOLD.label=Pakete pro Sekunde
+call-rate-limit.SIPX_PROXY_PACKETS_PER_SECOND_THRESHOLD.description=Anzahl der pro Sekunde erlaubten Pakete von einer IP Adresse \
+bevor eine DoS Attacke in betracht gezogen wird. Jedes mal wenn diese Grenze verletzt wird, wird die Gefahren Rate dieser IP um eins erhöht.
 
-call-rate-limit.SIPX_PROXY_THRESHOLD_VIOLATION_RATE.label=Violation Rate
-call-rate-limit.SIPX_PROXY_THRESHOLD_VIOLATION_RATE.description=When this threshold is exceeded the IP address is added on the black list.
+call-rate-limit.SIPX_PROXY_THRESHOLD_VIOLATION_RATE.label=Gefahren Rate
+call-rate-limit.SIPX_PROXY_THRESHOLD_VIOLATION_RATE.description=Wenn diese Grenze überschritten wird, wird die IP auf die Blacklist gesetzt.
 
-call-rate-limit.SIPX_PROXY_BAN_LIFETIME.label=Penalty Period
-call-rate-limit.SIPX_PROXY_BAN_LIFETIME.description=Length of time (in milliseconds) that rate violators will be penalized.
+call-rate-limit.SIPX_PROXY_BAN_LIFETIME.label=Bestrafungs Dauer
+call-rate-limit.SIPX_PROXY_BAN_LIFETIME.description=Zeit (in millisekunden) welche Gefahren bestraft werden.
 
 call-rate-limit.SIPX_PROXY_WHITE_LIST.label=White List
-call-rate-limit.SIPX_PROXY_WHITE_LIST.description=List of trusted IPs (comma separated values of IP addresses or subnet) that will be never added on the black list.
+call-rate-limit.SIPX_PROXY_WHITE_LIST.description=Liste von vertrauenswürdigen IPs(durch Kommata getrennte Werte von IP Adressen oder Subnets) welche niemals auf die Blacklist gesetzt werden.
 
 call-rate-limit.SIPX_PROXY_BLACK_LIST.label=Black List
-call-rate-limit.SIPX_PROXY_BLACK_LIST.description=List of untrusted IPs (comma separated values of IP addresses or subnet) considered DoS Attackers.
+call-rate-limit.SIPX_PROXY_BLACK_LIST.description=Liste von nicht vertrauenswürdigen IPs (Kommata getrennte Werte von IP Adressen oder Subnets) welche als DoS Angreifer behandelt werden.
 
-alert-info.label=Alert-Info
-alert-info.description=The Alert-Info header field can trigger alternate ringer sounds on many \
-telephones, it is used to mark external phonecalls as such and trigger a different ringer sound if the phone \
-is configured for it.
+alert-info.label=Alarm-Info
+alert-info.description=Das Alarm-Info Header Feld kann verschiedene Klingeltöne auf vielen \
+Telefonen verursachen, es wird benutzt um externe Anrufe als solche zu kennzeichnen und einen verschiedenen Klingelton abzuspielen, falls das Telefon \
+dafür konfiguriert ist.
 
-alert-info.EXTERNAL_ENABLED.label=Enable for external calls
+alert-info.EXTERNAL_ENABLED.label=Aktiviere für externe Anrufe
 
-alert-info.EXTERNAL.label=External call field value
-alert-info.EXTERNAL.description=The default value was chosen to satisfy the requirements of Snom \
-and Polycom phones and RFC 3261.
+alert-info.EXTERNAL.label=Externer Anruf Feld Wert
+alert-info.EXTERNAL.description=Der default Wert wurde gewählt um die Voraussetzungen von Snom und \
+Polycom Telefonen und RFC 3261 zu erfüllen.
 
-alert-info.INTERNAL_ENABLED.label=Enable for internal calls
+alert-info.INTERNAL_ENABLED.label=Aktiviere für interne Anrufe
 
-alert-info.INTERNAL.label=Internal call field value
-alert-info.INTERNAL.description=The default value was chosen to satisfy the requirements of Snom \
-and Polycom phones and RFC 3261.
+alert-info.INTERNAL.label=Interner Anruf Feld Wert
+alert-info.INTERNAL.description=Der default Wert wurde gewählt um die Voraussetzungen von Snom und \
+Polycom Telefonen und RFC 3261 zu erfüllen.
 
-alert-info.ON_EXISTING.label=When the field already exists:
-alert-info.ON_EXISTING.description=Phones can be configured to send their own Alert-Info field or other redundant proxies could already have inserted the field.
+alert-info.ON_EXISTING.label=Wenn das Feld bereits existiert:
+alert-info.ON_EXISTING.description=Telefone können so konfiguriert werden, dass Sie Ihr eigenes Alarm-Info Feld haben, oder andere redundante Proxies können bereits das Feld eingesetzt haben.
 
-type.replaceOrKeep.0=Leave it as it is
-type.replaceOrKeep.1=Replace it
+type.replaceOrKeep.0=Lassen Sie es so, wie es ist
+type.replaceOrKeep.1=Ersetzen Sie es
 
 proxy-configuration.SIPX_PROXY_LOG_LEVEL.label=Log Level
 proxy-configuration.SIPX_PROXY_TCP_PORT.label=TCP Port
@@ -61,10 +61,10 @@ proxy-configuration.SIPX_PROXY_UDP_PORT.label=UDP Port
 proxy-configuration.SIPX_PROXY_UDP_PORT.description=
 proxy-configuration.SIPX_PROXY_TLS_PORT.label=TLS Port
 proxy-configuration.SIPX_PROXY_TLS_PORT.description=
-proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.label=Authenticate Algorithm
-proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.description=The algorithm used in authentication
-proxy-configuration.SIPX_PROXY_MAX_FORWARDS.label=Maximum Forwards
-proxy-configuration.SIPX_PROXY_MAX_FORWARDS.description=(Max-Forwards header field)Maximum number of hops a request can transit on the way to its destination.
+proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.label=Authentifizierungs Algorithmus
+proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.description=Der Algorithmus der für Athentifizierung verwendet wird
+proxy-configuration.SIPX_PROXY_MAX_FORWARDS.label=Maximale Forwards
+proxy-configuration.SIPX_PROXY_MAX_FORWARDS.description=(Max-Forwards header Feld)Maximum number of hops a request can transit on the way to its destination.
 proxy-configuration.SIPX_PROXY_STALE_TCP_TIMEOUT.label=Stale TCP Timeout
 proxy-configuration.SIPX_PROXY_STALE_TCP_TIMEOUT.description=
 proxy-configuration.SIPX_PROXY_CALL_STATE.label=Call State
