--- a/sipxpbx/sipxproxy/sipxproxy_de.properties
+++ b/sipxpbx/sipxproxy/sipxproxy_de.properties
@@ -63,30 +63,30 @@ proxy-configuration.SIPX_PROXY_TLS_PORT.label=TLS Port
 proxy-configuration.SIPX_PROXY_TLS_PORT.description=
 proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.label=Authentifizierungs Algorithmus
 proxy-configuration.SIPX_PROXY_AUTHENTICATE_ALGORITHM.description=Der Algorithmus der für Athentifizierung verwendet wird
-proxy-configuration.SIPX_PROXY_MAX_FORWARDS.label=Maximale Forwards
-proxy-configuration.SIPX_PROXY_MAX_FORWARDS.description=(Max-Forwards header Feld)Maximum number of hops a request can transit on the way to its destination.
+proxy-configuration.SIPX_PROXY_MAX_FORWARDS.label=Maximale Weiterleitungen
+proxy-configuration.SIPX_PROXY_MAX_FORWARDS.description=(Max-Forwards header Feld)Maximale Anzahl an hops, welche ein Paket auf seinem Weg ans Ziel zurücklegen kann.
 proxy-configuration.SIPX_PROXY_STALE_TCP_TIMEOUT.label=Stale TCP Timeout
 proxy-configuration.SIPX_PROXY_STALE_TCP_TIMEOUT.description=
-proxy-configuration.SIPX_PROXY_CALL_STATE.label=Call State
+proxy-configuration.SIPX_PROXY_CALL_STATE.label=Rufe Status ab
 proxy-configuration.SIPX_PROXY_CALL_STATE.description=
-proxy-configuration.SIPX_PROXY_LOG_CONSOLE.label=Log Console
+proxy-configuration.SIPX_PROXY_LOG_CONSOLE.label=Log Konsole
 proxy-configuration.SIPX_PROXY_LOG_CONSOLE.description=
 
 subscriptionauth.label=Subscription Authentication
-subscriptionauth.PACKAGES_REQUIRING_AUTHENTICATION.label=Packages Requiring Authentication
+subscriptionauth.PACKAGES_REQUIRING_AUTHENTICATION.label=Pakete, die eine Authentifizierung voraussetzen
 subscriptionauth.PACKAGES_REQUIRING_AUTHENTICATION.description=
-subscriptionauth.TARGETS_EXEMPTED_FROM_AUTHENTICATION.label=Targets Exempted From Authentication
+subscriptionauth.TARGETS_EXEMPTED_FROM_AUTHENTICATION.label=Ziele, die von der Authentifizierung ausgenommen sind
 subscriptionauth.TARGETS_EXEMPTED_FROM_AUTHENTICATION.description=
 
 msftxchghack.label=Microsoft Exchange Hack
-msftxchghack.USERAGENT.label=User Agent
+msftxchghack.USERAGENT.label=Benutzer Agent
 msftxchghack.USERAGENT.description=
-msftxchghack.EXCHANGE_SERVER_FQDN.label=Trusted Microsoft Exchange Server
-msftxchghack.EXCHANGE_SERVER_FQDN.description=Fully Qualified Domain Name of Trusted Microsoft Exchange Server
-msftxchghack.ADDITIONAL_EXCHANGE_SERVER_FQDN.label=Additional Trusted Microsoft Exchange Server
-msftxchghack.ADDITIONAL_EXCHANGE_SERVER_FQDN.description=Fully Qualified Domain Name of Additional Trusted Microsoft Exchange Server
+msftxchghack.EXCHANGE_SERVER_FQDN.label=Vertrauenswürdige Microsoft Exchange Server
+msftxchghack.EXCHANGE_SERVER_FQDN.description=Der vollständige Domain Name der vertrauenswürdigen Microsoft Exchange Server
+msftxchghack.ADDITIONAL_EXCHANGE_SERVER_FQDN.label=Zusätzliche vertrauenswürdige Microsoft Exchange Server
+msftxchghack.ADDITIONAL_EXCHANGE_SERVER_FQDN.description=Vollständige Domain Namen von zusätzlichen vertrauenswürdigen Microsoft Exchange Servern
 
-authrules.label=Authentication Rules
-authrules.IDENTITY_VALIDITY_SECONDS.label=Identity Validity
+authrules.label=Authentifizierungs Regeln
+authrules.IDENTITY_VALIDITY_SECONDS.label=Gültigkeit der Identität
 authrules.IDENTITY_VALIDITY_SECONDS.description=
 
