--- a/sipxpbx/WEB-INF/admin/commserver/LocationPanel_de.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/LocationPanel_de.properties
@@ -9,3 +9,9 @@ title=Umgebung
 label.name=Name
 description.fqdn=Qualifizierter Name des Servers
 label.roles=Server Funktionen
+label.callTraffic=Anruf Traffic
+label.replicateConfig=Konfiguration
+description.callTraffic=Deaktivieren Sie dies, wenn Sie allen Anruf Traffic auf diesem Node deaktivieren wollen.
+description.replicateConfig=Deaktivieren Sie dies, damit auf diesem Server keine Repliken erstellt werden. Wenn Sie dies aktivieren, hat das eine komplette Replikation auf diesem Node zur Folge.
+title.advanced=Anruf Traffic and Replikations Optionen
+error.primary.config=Es ist nicht möglich, Konfigurations Replikation auf dem Hauptnode zu deaktivieren
