--- a/sipxpbx/WEB-INF/admin/commserver/LocationsPage_de.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/LocationsPage_de.properties
@@ -12,3 +12,4 @@ address=IP Adresse
 xml.rpc.error.state=Der Dienststatus von {0} konnte nicht abgerufen werden
 link.addLocation=Server hinzuf\u00FCgen
 label.status.off=Nicht initialisiert
+locations=Server
