--- a/sipxpbx/WEB-INF/admin/commserver/NatLocationPanel_de.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/NatLocationPanel_de.properties
@@ -17,3 +17,4 @@ startRtp.port=Beginn RTP Portbereich
 public.address.description=Wenn der Server NAT verwendet, muss als \u00F6ffentliche IP Adresse die Adresse angegeben werden, \u00F6ber die der NAT / Firewall Router vom Internet erreicht werden kann.
 message.invalidPublicAddress=Bitte \u00F6ffentliche IP Adresse angeben.
 title=NAT Umgebung
+title.nat=NAT
