--- a/sipxpbx/WEB-INF/admin/ldap/LdapAttrMapPanel_de.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapAttrMapPanel_de.properties
@@ -1,25 +1,75 @@
+label.attrMap=Zuordnen von LDAP-Attributen
 
-description.alias            = Wenn dieses Attribut mehrere Werte hat, dann wird ein separates Alias f\u00FCr jeden Wert erzeugt.
-description.defaultGroupName = Alle importierten Benutzer werden zu der vorgegebenen Gruppe hinzugef\u00FCgt. Falls diese Gruppe nicht existiert, wird sie erzeugt.
-description.defaultPin       = Wenn kein Mapping definiert wurde f\u00FCr das Attribut PIN, dann wird dieser vorgegebene PIN zugewiesen.
-description.filter           = Optionaler Filterausdruck. Zum Beispiel: 'ou=marketing'.Nur Eintr\u00E4ge, welche von diesem Filter selektiert werden, werden ber\u00FCcksichtigt. Zusammengesetzte Filterausdr\u00FCcke k\u00F6nnen benutzt werden, unter Angaben von & und |.
-description.objectClass      = Die LDAP-Klasse, die benutzt wird um Benutzereintr\u00E4ge zu filtern. Eintr\u00E4ge, welche dieser Klasse nicht angeh\u00F6ren, werden bei der Suche nicht ber\u00FCcksichtigt.
-description.searchBase       = Die Wurzel des LDAP-Baumes von wo die Suche nach Benutzerdaten begonnen wird.
-description.sipPassword      = Wenn kein Mapping definiert wurde f\u00FCr das Attribut SIP Passwort, wird ein neues Passwort automatisch generiert.
-description.userGroup        = Wenn dieses Attribut mehrere Werte hat, wird ein importierter Benutzer zu mehreren Gruppen hinzugef\u00FCgt. Gruppen werden wenn n\u00F6tig erzeugt.
-description.userName         = LDAP-Attribut, welches der Benutzer ID entspricht. Sein Wert muss einmalig sein.
+label.searchBase=Basis f\u00FCr die Suche
+description.searchBase=Die Wurzel des LDAP-Baumes von wo die Suche nach Benutzerdaten begonnen wird.
+label.objectClass=Objektklasse Benutzer
+description.objectClass=Die LDAP-Klasse, die benutzt wird um Benutzereintr\u00E4ge zu filtern. Eintr\u00E4ge, welche dieser Klasse nicht angeh\u00F6ren, werden bei der Suche nicht ber\u00FCcksichtigt.. \
+label.filter=Filter
+description.filter=Optionaler Filterausdruck. Zum Beispiel: 'ou=marketing'.Nur Eintr\u00E4ge, welche von diesem Filter selektiert werden, werden ber\u00FCcksichtigt. Zusammengesetzte Filterausdr\u00FCcke k\u00F6nnen benutzt werden, unter Angaben von & und |. \
+label.userName=Benutzer ID Attribut
+description.userName=LDAP-Attribut, welches der Benutzer ID entspricht. Sein Wert muss einmalig sein.
+label.firstName=Vorname-Attribut
+description.firstName=Der Vorname des Benutzers
+label.lastName=Nachname-Attribut
+description.lastName=Der Nachname des Benutzers
+label.alias=Alias-Attribut
+description.alias=Wenn dieses Attribut mehrere Werte hat, dann wird ein separates Alias f\u00FCr jeden Wert erzeugt.
+label.email=EMail Attribut
+description.email=Wird für Voicemail Nachrichten verwendet. Falls Voicemail auf diesem System nicht installiert oder verfügbar ist, wird die E-Mail Adresse nicht importiert.
+label.userGroup=Benutzergruppe-Attribut
+description.userGroup=Wenn dieses Attribut mehrere Werte hat, wird ein importierter Benutzer zu mehreren Gruppen hinzugef\u00FCgt. Gruppen werden wenn n\u00F6tig erzeugt.
+label.defaultGroupName=Vorgegebene Benutzergruppe
+description.defaultGroupName=Alle importierten Benutzer werden zu der vorgegebenen Gruppe hinzugef\u00FCgt. Falls diese Gruppe nicht existiert, wird sie erzeugt.
+label.pin=PIN-Attribut
+description.pin=Benutzer Passwort. Wenn kein Mapping für das Passwort konfiguriert wurde, \
+bekommen alle importierten Benutzer den default PIN, welcher hier angegeben wird. Dies ist der selbe Wert für beides \
+Passwort und Voicemail PIN.
+label.defaultPin=Vorgegebener PIN
+description.defaultPin=Standard Pin für importierte Benutzer (wird auf PIN gesetzt, Sie benachrichtigen alle Ihre Benutzer, dass dieser geändert werden muss).
+label.defaultPin2=Bestätige Default PIN
+label.sipPassword=SIP Passwort Attribut
+description.sipPassword=Wenn kein Mapping definiert wurde f\u00FCr das Attribut SIP Passwort, wird ein neues Passwort automatisch generiert.
+label.imId=IM ID
+description.imId=Die instant message id. Ein neuer Benutzer mit diesem Benutzernamen wird auf dem Messaging Server Level erstellt.
+label.voicemailPin=Voicemail PIN
+description.voicemailPin=Benutzer Voicemail PIN. Wenn kein Mapping für den Voicemail PIN konfiguriert wurde, \
+bekommen alle importierten Benutzer den default PIN, welcher hier angegeben wird. Dies ist der selbe Wert für beides \
+Passwort und Voicemail PIN.
 
-label.alias            = Alias-Attribut
-label.attrMap          = Zuordnen von LDAP-Attributen
-label.defaultGroupName = Vorgegebene Benutzergruppe
-label.defaultPin       = Vorgegebener PIN
-label.defaultPin2      = Vorgegebenen PIN best\u00E4tigen
-label.filter           = Filter
-label.firstName        = Vorname-Attribut
-label.lastName         = Nachname-Attribut
-label.objectClass      = Objektklasse Benutzer
-label.pin              = PIN-Attribut
-label.searchBase       = Basis f\u00FCr die Suche
-label.sipPassword      = SIP Passwort-Attribut
-label.userGroup        = Benutzergruppe-Attribut
-label.userName         = Benutzer ID Attribut
+label.jobTitle=Berufsbezeichnung
+description.jobTitle=Die Berufsbezeichnung. Dieser Wert wird unter Benutzer Kontakt Informationen gespeichert
+label.department=Abteilung
+description.department=Job Abteilung
+label.companyName=Firmen Name
+description.companyName=Firmen Name
+label.assistantName=Name des Assistents
+description.assistantName=Name des Assistents des Benutzers
+label.cellPhoneNumber=Telefonnummer
+description.cellPhoneNumber=Die Telefonnummer des Benutzers
+label.homePhoneNumber=Home Telefonnummer
+description.homePhoneNumber=Die Home Telefonnummer
+label.assistantPhoneNumber=Assistent Telefonummer
+description.assistantPhoneNumber=Die Telefonnummer des Assistents des Benutzers
+label.faxNumber=Faxnummer
+description.faxNumber=Die Faxnummer des Benutzers
+label.alternateEmail=Alternative E-Mail Adresse
+description.alternateEmail=Die alternative E-Mail Adresse des Benutzers
+label.alternateImId=Alternativer IM Account
+description.alternateImId=Alternativer IM Account des Benutzers
+label.location=Ort
+description.location=Der Ort des Benutzers
+
+homeAddressTitle=Home Addresse
+officeAddressTitle=Office Addresse
+label.street=Straße
+description.street=Die Straße der Adresse.
+label.city=Stadt
+description.city=Die Stadt der Adresse.
+label.state=Staat
+description.state=Der Staat der Adresse
+label.country=Land
+description.country=Das Land der Adresse
+label.zip=Zip
+description.zip=der Zip Code
+
+title=LDAP Attribut Mapping
