--- a/sipxpbx/WEB-INF/admin/ldap/LdapConnectionPanel_de.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapConnectionPanel_de.properties
@@ -1,3 +1,4 @@
+title=LDAP Verbindungseinstellungen
 label.host=Servername
 description.host=IP-Adresse oder Name des Servers auf dem der LDAP-Dienst l\u00E4uft.
 label.port=Port
@@ -8,4 +9,8 @@ description.principal=Login-Name des Benutzers f\u00FCr den LDAP-Dienst. Lassen 
 label.secret=Passwort
 label.secret2=Passwort best\u00E4tigen
 description.secret=Passwort f\u00FCr einfache Authentizierung.
+label.tls=Benutze TLS
+description.tls=Aktiviere SSL/TLS Verbindung zu Ihrem LDAP Server, default port ist normalerweise 636
+label.domain=Domain
+description.domain=Geben Sie die LDAP Domain an
 
