--- a/sipxpbx/WEB-INF/admin/ldap/LdapImportPreview_de.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapImportPreview_de.properties
@@ -1,19 +1,35 @@
+title=Vorschau der von LDAP importierten Daten
+label.firstName=Vorname
+label.lastName=Nachname
+label.userId=Benutzer ID
+label.pin=PIN
+label.sipPassword=SIP Passwort
+label.groups=Gruppen
+label.aliases=Aliases
+label.email=E-Mail
+label.imId=IM ID
+label.jobTitle=Job Bezeichnung
+label.jobDept=Abteilung
+label.companyName=Firmen Name
+label.assistantName=Assistent Name
+label.cellPhoneNumber=Telefonnummer
+label.homePhoneNumber=Home Telefonnummer
+label.assistantPhoneNumber=Assistent Telefonnummer
+label.faxNumber=Faxnummer
+label.alternateEmailAddress=Alternative E-Mail Adresse
+label.alternateImId=Alternativer IM Account
+label.location=Ort
+label.homeAddressTitle=Heimatadresse
+label.officeAddressTitle=Büroadresse
+label.street=Straße
+label.city=Stadt
+label.state=Staat
+label.country=Ort
+label.zip=Zip
+link.download=Download Vorschau
+button.next=Weiter
+button.previous=Vorheriges
+msg.success=LDAP korrekt konfiguriert. Drücken Sie OK um zur LDAP Import Seite zu gelangen.
+msg.empty=Es wurden keine passenden Benutzer gefunden.
+quick.help=<p>Wenn der LDAP Import korrekt konfiguriert ist, werden Sie ein Beispiel eines importierten Benutzers sehen.<br/>Dr\u00FCcken Sie OK um zur LDAP Importseite zur\u00FCckzukehren.
 
-button.next     = Weiter
-button.previous = Zur\u00FCck
-
-label.aliases     = Aliase
-label.firstName   = Vorname
-label.groups      = Gruppen
-label.lastName    = Nachname
-label.pin         = PIN
-label.sipPassword = SIP Passwort
-label.userId      = Benutzer ID
-
-link.download = Vorschau herunterladen
-
-msg.success = LDAP korrekt konfiguriert. Dr\u00FCcken Sie OK um zur LDAP-Import Seite zur\u00FCckzukehren.
-
-quick.help = <p>Wenn der LDAP Import korrekt konfiguriert ist, werden Sie ein Beispiel eines importierten Benutzers sehen.<br/>Dr\u00FCcken Sie OK um zur LDAP Importseite zur\u00FCckzukehren oder clicken Sie auf den LDAP-Server Link um die Serverparameter oder das Mapping zu \u00E4ndern.</p>
-
-title = Vorschau der von LDAP importierten Daten
