--- a/sipxpbx/WEB-INF/admin/ldap/LdapImport_de.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapImport_de.properties
@@ -1,7 +1,9 @@
-
-label.import = Importieren
-label.verify = Vorschau
-
-msg.success = Der LDAP-Import wurde gestartet. Die Dienstestatusseite enth\u00E4lt weitere Informationen.
-
-title = LDAP-Daten importieren
+title=Import von LDAP oder Active Directory Server
+quick.help=<p>Drücken Sie <em>Vorschau</em> um die LDAP import Konfiguration zu verifizieren. Falls die LDAP Server Verbindungsparameter \
+und Attribute richtig konfiguriert sind, werden Sie das Beispiel eines importierten Bnutzers sehen.</p>\
+<p>Drücken Sie <em>Importiere</em> um mit dem Importieren der Benutzer von LDAP zu beginnen.<br/>\
+Gehen Sie auf die Job Status Seite um den Status des Imports zu kontrollieren.</p>
+label.import=Import
+label.verify=Vorschau
+label.job.status=Job Status
+msg.success=LDAP Import eingeleitet. Gehen Sie auf die Job Status Seite um die Operationen zu beobachten.
