--- a/sipxpbx/WEB-INF/admin/ldap/LdapPage_de.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapPage_de.properties
@@ -1,4 +1,10 @@
-job.status = Dienstestatus
-ldap.server = LDAP-Dienst
-
-quick.help = <p>W\u00E4hlen Sie <em>Vorschau</em> um die Konfiguration des LDAP-Imports zu verifizieren. Sofern alles korrekt konfiguriert ist, so werden Sie ein Beispiel eines importierten Benutzers sehen.</p><p>Um den Import zu starten, bet\u00E4tigen sie bitte das Feld <em>Importieren</em>.<br/>Gehen SIe bitte zur Dienstestatus Seite um den Status des Imports zu verfolgen.
+title=LDAP Konfiguration
+tab.configurationTarget=Konfiguration
+tab.importTarget=Import
+tab.settingsTarget=Authentifizierungs Einstellungen
+label.configured=LDAP Authentifizierung
+description.configured=Wenn nicht altiviert, wird LDAP Authentifizierung nicht benutzt für das User Posrtal oder OpenFire
+label.applySettings=Übernehme Einstellungen
+label.selectServer=Wähle LDAP Server aus
+description.selectServer=Wählen Sie die LDAP Verbindung aus, die konfiguriert werden soll
+msg.ldapconnection.failed=Verbindung zu {0} fehlgeschlagen
