--- a/sipxpbx/WEB-INF/admin/ldap/LdapServer_de.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapServer_de.properties
@@ -1,20 +1,28 @@
-
+label.certificates = Zertifikate
 label.continue = Weiter
+label.apply = Übernehme
+label.cancel = Abbrechen
 
-quick.helpAttrMap       = <p>LDAP-Daten aus der LDAP-Datenbank werden verwendet, um neue Benutzer zu erstellen oder existierende Benutzer zu \
-                          erneuern. Diese Seite erlaubt es LDAP-Attribute Benutzern zuzuordnen.<br/>Zum Beispiel: Wenn Sie das Attribut \
-                          <em>sn</em> dem Feld <em>Nachname</em> zuordnen, so wird der Wert von <em>sn</em> dem Nachnamen des Benutzers \
-                          zugeordnet.</p><b>Active Directory</b><p>Es ist m\u00F6glich Benutzerdaten mit Microsoft Active Directory \
-                          zu synchronisieren.</p>
+quick.helpAttrMap = <p>LDAP-Daten aus der LDAP-Datenbank werden verwendet, um neue Benutzer zu erstellen oder existierende Benutzer zu \
+erneuern. Diese Seite erlaubt es LDAP-Attribute Benutzern zuzuordnen.<br/>Zum Beispiel: Wenn Sie das Attribut \
+<em>sn</em> dem Feld <em>Nachname</em> zuordnen, so wird der Wert von <em>sn</em> dem Nachnamen des Benutzers \
+zugeordnet.</p><b>Active Directory</b><p>Es ist m\u00F6glich Benutzerdaten mit Microsoft Active Directory \
+zu synchronisieren.</p>
 
-quick.helpConnection    = <p>Der LDAP-Dienst muss verf\u00FCgbar sein um weiterzufahren. Falls der LDAP-Server f\u00FCr Lesezugriffe \
-                          Authentifizierung erfordert, geben Sie bitte Benutzername und Passwort ein.</p><p>W\u00E4hlen Sie <em>Weiter</em> \
-                          um zum LDAP Attributmapping zu gelangen.</p><b>Active Directory</b><p>Es ist m\u00F6glich Benutzerdaten mit \
-                          Microsoft Active Directory zu synchronisieren.</p>
+quick.helpConnection = <p>Der LDAP-Dienst muss verf\u00FCgbar sein um weiterzufahren. Falls der LDAP-Server f\u00FCr Lesezugriffe \
+Authentifizierung erfordert, geben Sie bitte Benutzername und Passwort ein.</p><p>W\u00E4hlen Sie <em>Weiter</em> \
+um zum LDAP Attributmapping zu gelangen.</p><b>Active Directory</b><p>Es ist m\u00F6glich Benutzerdaten mit \
+Microsoft Active Directory zu synchronisieren.</p>
 
 quick.helpObjectClasses = <p>Diese Seite zeigt eine Liste aller Objekte an, welche vom konfigurierten LDAP-Server unterst\u00FCtzt werden.<br/> \
-                          W\u00E4hlen Sie dijenigen Objekte aus, welche Benutzerinformation beinhalten.<br/><p>W\u00E4hlen Sie <em>Weiter</em> \
-                          um Objektattribute auf interne Eigneschaften abzubilden.</p><b>Active Directory</b><p>Es ist m\u00F6glich \
-                          Benutzerdaten mit Microsoft Active Directory zu synchronisieren.</p>
+W\u00E4hlen Sie dijenigen Objekte aus, welche Benutzerinformation beinhalten.<br/><p>W\u00E4hlen Sie <em>Weiter</em> \
+um Objektattribute auf interne Eigneschaften abzubilden.</p><b>Active Directory</b><p>Es ist m\u00F6glich \
+Benutzerdaten mit Microsoft Active Directory zu synchronisieren.</p>
 
-title = Daten vom LDAP-Dienst importieren
+title = LDAP / Active Directory Server
+searchSchema.violation.error=Es ist nicht möglich, dass Schema vom LDAP Server zu erhalten:
+searchSchema.anonymousBinding.error=Es ist nicht möglich, dass Schema vom LDAP Server zu erhalten. Bitte vergewissern Sie sich, dass anonymes-binding eingeschaltet ist.
+readData.failed=Lesen der Informationen von LDAP fehlgeschlagen: {0}
+connection.failed=Fehlgeschlagene Verbindung zu LDAP Server: {0}
+addLdapConnection=Füge LDAP Verbindung hinzu
+removeLdapConnection=Entferne LDAP Verbindung
