--- a/sipxpbx/WEB-INF/admin/BulkImport_de.properties
+++ b/sipxpbx/WEB-INF/admin/BulkImport_de.properties
@@ -3,23 +3,46 @@
 #Updated Calivia GmbH
 #Mon Oct 09 13:05:33 CEST 2006
 
-description.csv = Name der Datei in CSV Format ("Comma-Separated Values").
+description.csv=Name der Datei in CSV Format ("Kommata getrennte Werte").
+label.csv=CSV Datei
+label.import=Importiere
+label.export=Exportiere
+msg.error=Datenimport aus Datei {0} fehlgeschlagen.
+msg.errorNoFile=Bitte geben sie den Namen der zu importierenden Datei ein.
+msg.success=Daten wurden erfolgreich importieret. Sie k\u00F5nnen den Fortgang auf der <em>Diensteseite</em> beobachten.
+msg.exportSuccess=Daten wurden erfolgreich exportiert.
+msg.exportError=Datenexport aus Datei {0} fehlgeschlagen.
+quick.help=<p>Telefon und Benutzer Daten können von einer CSV Datei importiert werden (Kommata getrennte Werte), \
+welches kompatibel ist mit den meißten spreadsheet Applikationen. Die CSV Datei sollte eine Titelzeile \
+und die folgenden Felder haben\:</p><ul><li>Benutzername</li>\
+<li>Voice-mail PIN</li>\
+<li>SIP Passwort</li>\
+<li>Vorname</li>\
+<li>Nachname</li>\
+<li>Benutzer Alias</li>\
+<li>E-Mail Adresse</li>\
+<li>Benutzer Gruppe</li>\
+<li>Telefon Seriennummer</li>\
+<li>Telefon Modell</li>\
+<li>Telefon Gruppe</li>\
+<li>Phone description</li>\
+<li>IM ID</li></ul>\
+<p>Each line from imported file will result in creation of the phone and the user assigned to that phone. \
+If user group or phone group fields are not empty, the newly created user and phone will be added to respective groups. \
+Groups will be created if they do not exist already. <p><p>If the user with the same username is already present, \
+this system will update existing user instead of creating a new one. The same is true for phones\: if the phone with \
+the same serial number already exist it'll be updated.<br/>Only user name and phone serial number are obligatory fields. \
+You can leave the remaining fields empty - in which case this system will not overwrite their values.</p>
+importDescription=To import the phone and user configuration from a CSV file,<br/> \
+enter the name of the CSV file and press the <strong><em>Import</em></strong> button.
+title=Import / Export
+job.status=Job Status
+exportDescription=To export the current phone and user configuration to a CSV file press the <strong><em>Export Now</em></strong> button.<br/> \
+The export file will be available for download once the export is completed.<br/> \
+This CSV file can then be used to import the phone and user configuration if required.
+button.exportNow=Export Now
+exportCompleted=Export completed successfully. Please download the CSV file by clicking on the link below.
+tab.import=Import
+tab.export=Export
 
-job.status = Dienststatus
 
-label.csv    = CSV Datei
-label.import = Importieren
-
-msg.error       = Datenimport aus Datei {0} fehlgeschlagen.
-msg.errorNoFile = Bitte geben sie den Namen der zu importierenden Datei ein
-msg.success     = Daten wurden erfolgreich importieret. Sie k\u00F5nnen den Fortgang auf der <em>Diensteseite</em> beobachten.
-msg.exportSuccess = Daten wurden erfolgreich exportieret
-msg.exportError       = Datenexport aus Datei {0} fehlgeschlagen.
-
-quick.help = <p>Der einfachste Weg Daten zu importieren ist es, wenn Sie die Daten in einem beliebigen Tabellenkalkulations- programm erstellen und sie daraufhin aus der Tabellenkalkulation heraus in eine CSV Datei exportieren. Die Datei sollte eine Titelzeile und die folgernden Felder enthalten:</p><ul><li>User name</li><li>Voice-mail PIN</li><li>SIP password</li><li>First name</li><li>Last name</li><li>User alias</li><li>User group</li><li>Phone serial number</li><li>Phone model</li><li>Phone group</li><li>Phone description</li></ul><p>Dies entspricht im Deutschen:</p><ul><li>Benutzername</li><li>Antwortsystem PIN</li><li>SIP Passwort</li><li>Vorname</li><li>Nachname</li><li> Alias</li><li>Benutzergruppe(n)</li><li>Seriennummer des Telefons</li><li>Hersteller</li><li>Modell</li><li>Telefongruppe(n)</li><li>Telefon Beschreibung</li></ul><p>F\u00FCr jede Zeile der importierten Datei wird ein neues Telefon, sowie der dazu geh\u00F6rige Benutzer erstellt. Sollte ein Telefon mit der verwendeten Seriennummer bereits im System vorhanden sein, wird dieses durch die importierten Daten \u00FCberschrieben. Selbiges gilt f\u00FCr bestehende Benutzer.
-
-title = Datenimport / Datenexport
-importDescription=
-
-button.exportNow=Exportieren
-exportDescription=
